--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ beautifulsoup4==4.9.1
 PyQt5==5.13.0
 PyQt5-sip==12.7.0
 pyqt5-tools==5.13.0.1.5
-git+https://gitlab.com/obuilds/public/pytube@ob-v1
+git+https://github.com/ssuwani/pytube
 urllib3==1.25.3
